  * mod_fastcgi: x-sendfile2 parse error debugging
  * Fix mod_proxy dead host detection if connect() fails
  * Fix fd leaks in mod_cgi (fds not closed on pipe/fork failures, found by Rodrigo, fixes #2158, #2159)
  * Fix segfault with broken rewrite/redirect patterns (fixes #2140, found by crypt)
  * Append to previous buffer in con read (fixes #2147, found by liming, CVE-2010-0295)

- 1.4.25 - 2009-11-21
  * mod_magnet: fix pairs() for normal tables and strings (fixes #1307)
  * mod_magnet: add traceback for printing lua errors
  * mod_rewrite: fix compile error if compiled without pcre
  * disable warning "CLOSE-read" (fixes #2091)
  * mod_rrdtool: fix creating file if it doesn't exist (#1788)
  * reset tlsext_server_name in connection_reset - fixes random hostnames in the $HTTP["host"] conditional
  * export some SSL_CLIENT_* vars for client cert validation (fixes #1288, thx presbrey)
  * mod_fastcgi: fix mod_fastcgi packet parsing
  * mod_fastcgi: Don't reconnect after connect() succeeded (fixes #2096)
  * Fix configure.ac to allow autoreconf, also enables make V=0

- 1.4.24 - 2009-10-25
  * Add T_CONFIG_INT for bigger integers from the config (needed for #1966)
  * Use unsigned int (and T_CONFIG_INT) for max_request_size
  * Use unsigned int for secdownload.timeout (fixes #1966)
  * Keep url/host values from connection to display information while keep-alive in mod_status (fixes #1202)
  * Add server.breakagelog, a "special" stderr (fixes #1863)
  * Fix config evaluation for debug.log-timeouts option (#1529)
  * Add "cgi.execute-x-only" to mod_cgi, requires +x for cgi scripts (fixes #2013)
  * Fix FD_SETSIZE comparision warnings
  * Add "lua-5.1" to searched pkg-config names for lua
  * Fix unused function webdav_lockdiscovery in mod_webdav
  * cmake: Fix crypt lib check
  * cmake: Add -export-dynamic to link flags, fixes build on FreeBSD
  * Set FD_CLOEXEC for bound sockets before pipe-logger forks (fixes #2026)